feat: implement definite-length CBOR maps and arrays (4) (#392)
* feat: throw if driving privileges array is empty

* feat: wrap codes in driving privilege in Optional

* feat: improve method that converts driving privilege fields to snake case

* feat: make IssuerSignedItem generic

* refactor: unify existing CBOR serializers

* feat: add COSEProtectedHeaderSerializer

* feat: add COSEUnprotectedHeaderSerializer

* feat: add ValueDigestsSerializer

* feat: add ValidityInfoSerializer

* feat: add StatusSerializer

* feat: add DeviceKeyInfoSerializer

* feat: add DrivingPrivilegeSerializer

* feat: change COSEUnprotectedHeader to be a class containing x5chain

* feat: change COSEProtectedHeader to be a class containing alg

* feat: apply snake_case naming strategy to Status record

* feat: replace deprecated writeStartArray

* feat: replace deprecated writeStartArray

* feat: repalce map with properties in COSEKey and improve key validation

* feat: register new serializers

* feat: apply snake_case naming strategy to DrivingPrivilege class

* docs: add Javadoc for ValidityInfoSerializer

* docs: add Javadoc for ValueDigestsSerializer

* docs: add Javadoc for StatusSerializer

* docs: add Javadoc for DeviceKeyInfoSerializer

* docs: add Javadoc for DrivingPrivilegeSerializer

* docs: add Javadoc for COSEProtectedHeaderSerializer

* docs: add Javadoc for COSEUnprotectedHeaderSerializer

* refactor: merge IssuerSignedItemEncoder into IssuerSignedItemSerializer

* test: rename to InstantSerializerTest and make minor changes

* test: rename to LocalDateSerializerTest and make minor changes

* test: rename to IssuerSignedSerializerTest and update tests

* test: update failing tests in MobileSecurityObjectSerializerTest

* test: update failing tests in MobileSecurityObjectFactoryTest

* test: update failing tests in IssuerSignedFactoryTest

* test: simplify JacksonCBOREncoderProviderTest

* test: update COSEKeyFactoryTest tests

* test: update COSEProtectedHeaderBuilderTes